--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "assignment5.comp304.josephharrisonlimkevinma.labassignment5"
+        applicationId "com.comp304.ass5"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
