--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="assignment5.comp304.josephharrisonlimkevinma.labassignment5">
+          package="com.comp304.ass5">
 
 	<!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
